[package]
name = "ez-installer-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell_PropertiesSystem"
]}

[build-dependencies]
winres = "0.1" 